# AI-Subtitle-Learner

./: .dockerignore  .env  .env.example  .gitignore  DOCKER.md  Dockerfile  Dockerfile.gpu  Makefile  README.md  README.zh-CN.md  docker-compose.gpu.yml  docker-compose.override.example.yml  docker-compose.test.yml  docker-compose.yml  huggine_face  huggine_face.pub  pyproject.toml  pytest.ini  requirements.txt  run.sh
app/: __init__.py  celery_app.py  config.py  main.py
app/celery/: __init__.py  app.py
app/common/: config.py
app/core/: constants.py  entities.py
app/database/: __init__.py  base.py  init_db.py  models.py
app/routers/: batch.py  dictionary.py  health.py  subtitle.py  synthesis.py  transcribe.py  video.py
app/schemas/: __init__.py  batch.py  common.py  subtitle.py  synthesis.py  transcribe.py  video_download.py
app/services/: batch_service.py  dictionary_service.py  subtitle_service.py  synthesis_service.py  task_manager.py  transcribe_service.py  video_download_service.py  video_service.py
app/tasks/: __init__.py  subtitle_tasks.py  transcribe_tasks.py  video_tasks.py
docs/: LOGGING.md
nginx/: Dockerfile  README.md  README.zh-CN.md  nginx.conf
scripts/: download_whisperx_models.py  download_whisperx_models.sh  run-tests.ps1  run-tests.sh
tests/: README.md  conftest.py  test_dictionary.py  test_health.py  test_subtitle.py  test_video.py
thread/: video_download_thread.py
web/: .dockerignore  .editorconfig  .eslintrc.json  .prettierignore  .prettierrc.json  Dockerfile  README.md  README.zh-CN.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
(+63 files in other folders)
