[project]
name = "ai-subtitle-learner"
version = "1.0.0"
description = "AI-powered subtitle learning system backend service"
requires-python = ">=3.12"
dependencies = [
    # FastAPI 核心依赖
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    # FastAPI 性能优化插件
    "uvloop>=0.19.0",
    "orjson>=3.9.10",
    "httptools>=0.6.1",
    # HTTP 客户端
    "httpx>=0.25.0",
    "requests>=2.31.0",
    # 异步支持
    "aiofiles>=23.2.1",
    # 环境变量管理
    "python-dotenv>=1.0.0",
    # 日志
    "loguru>=0.7.2",
    # Core 模块依赖
    "langdetect>=1.0.9",
    "pydub>=0.25.1",
    "json-repair>=0.7.0",
    "openai>=1.0.0",
    "tenacity>=8.2.0",
    "diskcache>=5.6.0",
    "setuptools>=65.0.0",
    "gputil>=1.4.0",
    # 视频下载
    "yt-dlp>=2023.12.30",
    # WhisperX（用于精准时间戳转录）
    "whisperx>=3.1.1",
    # 消息队列和任务调度
    "celery>=5.3.0",
    "kombu>=5.3.0",
    # 数据库
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.12.0",
    # Redis
    "redis>=5.0.0",
    "hiredis>=2.2.0",
    # MinIO 对象存储
    "minio>=7.2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

